# Pendelum-Control

./: CMakeLists.txt  README.md  doublependelum.cpp  doublependelum.h  main.cpp  output.csv  pendelum.cpp  pendelum.h  plot.ipynb
